// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterableApprovalList match last snapshot 1`] = `
<FilterableList
  items={
    Array [
      Object {
        "label": <LabelComponent
          label="Account 1"
        />,
        "value": "account1",
      },
      Object {
        "label": <LabelComponent
          label="Account 2"
        />,
        "value": "account2",
      },
      Object {
        "label": <LabelComponent
          label="Dovey"
        />,
        "value": "dovey",
      },
      Object {
        "label": <LabelComponent
          label="Dovey 2"
        />,
        "value": "dovey2",
      },
      Object {
        "label": <LabelComponent
          label="Dovey 2"
        />,
        "value": "dovey3",
      },
      Object {
        "label": <LabelComponent
          label="Account 2"
        />,
        "value": "account3",
      },
    ]
  }
  title={
    <div>
      Select
    </div>
  }
/>
`;

exports[`createLabelComponent returns a component with approval ticks 1`] = `
.c2 {
  color: #A42824;
}

.c3 {
  color: #FFEE52;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<LabelComponent
  label="approvalLabel"
>
  <ApprovedContainer
    className="className"
    id="id"
  >
    <StyledComponent
      className="className"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "FilterableApprovalList__ApprovedContainer-sc-1ytxtx6-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:flex;align-items:center;justify-content:space-between;flex-direction:row;",
            ],
          },
          "displayName": "ApprovedContainer",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "FilterableApprovalList__ApprovedContainer-sc-1ytxtx6-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      id="id"
    >
      <div
        className="c0 className"
        id="id"
      >
        approvalLabel
        <div />
        <FilterableApprovalList__IconContainer>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "FilterableApprovalList__IconContainer-sc-1ytxtx6-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "display:flex;align-items:center;justify-content:space-between;flex-direction:row;",
                  ],
                },
                "displayName": "FilterableApprovalList__IconContainer",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "FilterableApprovalList__IconContainer-sc-1ytxtx6-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            >
              <Icon
                color="primary"
                name="check"
              >
                <IconWithTheme
                  color="primary"
                  isVisible={true}
                  name="check"
                  shade="main"
                  size="sm"
                  theme={
                    Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "79,38,98",
                          "hex": "#4E2662",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "173,101,207",
                          "hex": "#AD65CF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "116,60,143",
                          "hex": "#743C8F",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "206,185,0",
                          "hex": "#CEB900",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "255,245,157",
                          "hex": "#FFF59D",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "255,238,82",
                          "hex": "#FFEE52",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "197,73,1",
                          "hex": "#C54901",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "255,115,32",
                          "hex": "#FF7320",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "102,22,20",
                          "hex": "#661614",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "218,52,47",
                          "hex": "#DA342F",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "164,40,36",
                          "hex": "#A42824",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "5,38,59",
                          "hex": "#05263B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "89,156,175",
                          "hex": "#599CAF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "11,70,107",
                          "hex": "#0B466B",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    }
                  }
                >
                  <IconContainer
                    isVisible={true}
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Icon__IconContainer-ap8b0n-0",
                            "isStatic": false,
                            "lastClassName": "bJvwCd",
                            "rules": Array [
                              [Function],
                              " ",
                              [Function],
                            ],
                          },
                          "displayName": "IconContainer",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Icon__IconContainer-ap8b0n-0",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      isVisible={true}
                    >
                      <div
                        className=""
                      >
                        <StyledFontAwesomeIcon
                          color="primary"
                          icon="check"
                          shade="main"
                          size="sm"
                          theme={
                            Object {
                              "action": Object {
                                "dark": Object {
                                  "RGB": "79,38,98",
                                  "hex": "#4E2662",
                                  "on": "#FFFFFF",
                                },
                                "light": Object {
                                  "RGB": "173,101,207",
                                  "hex": "#AD65CF",
                                  "on": "#FFFFFF",
                                },
                                "main": Object {
                                  "RGB": "116,60,143",
                                  "hex": "#743C8F",
                                  "on": "#FFFFFF",
                                },
                              },
                              "background": Object {
                                "RGB": "246,246,246",
                                "hex": "#F6F6F6",
                              },
                              "black": Object {
                                "main": Object {
                                  "RGB": "39,39,39",
                                  "hex": "#272727",
                                  "on": "#FFFFFF",
                                },
                                "tint20": Object {
                                  "RGB": "236,236,236",
                                  "hex": "#ECECEC",
                                  "on": "#272727",
                                },
                                "tint40": Object {
                                  "RGB": "199,199,199",
                                  "hex": "#C7C7C7",
                                  "on": "#272727",
                                },
                                "tint60": Object {
                                  "RGB": "160,160,160",
                                  "hex": "#A0A0A0",
                                  "on": "#FFFFFF",
                                },
                                "tint80": Object {
                                  "RGB": "105,105,105",
                                  "hex": "#696969",
                                  "on": "#FFFFFF",
                                },
                              },
                              "complimentary": Object {
                                "dark": Object {
                                  "RGB": "206,185,0",
                                  "hex": "#CEB900",
                                  "on": "#272727",
                                },
                                "light": Object {
                                  "RGB": "255,245,157",
                                  "hex": "#FFF59D",
                                  "on": "#272727",
                                },
                                "main": Object {
                                  "RGB": "255,238,82",
                                  "hex": "#FFEE52",
                                  "on": "#272727",
                                },
                              },
                              "error": Object {
                                "dark": Object {
                                  "RGB": "197,73,1",
                                  "hex": "#C54901",
                                  "on": "#FFFFFF",
                                },
                                "main": Object {
                                  "RGB": "255,115,32",
                                  "hex": "#FF7320",
                                  "on": "#FFFFFF",
                                },
                              },
                              "primary": Object {
                                "dark": Object {
                                  "RGB": "102,22,20",
                                  "hex": "#661614",
                                  "on": "#FFFFFF",
                                },
                                "light": Object {
                                  "RGB": "218,52,47",
                                  "hex": "#DA342F",
                                  "on": "#FFFFFF",
                                },
                                "main": Object {
                                  "RGB": "164,40,36",
                                  "hex": "#A42824",
                                  "on": "#FFFFFF",
                                },
                              },
                              "secondary": Object {
                                "dark": Object {
                                  "RGB": "5,38,59",
                                  "hex": "#05263B",
                                  "on": "#FFFFFF",
                                },
                                "light": Object {
                                  "RGB": "89,156,175",
                                  "hex": "#599CAF",
                                  "on": "#FFFFFF",
                                },
                                "main": Object {
                                  "RGB": "11,70,107",
                                  "hex": "#0B466B",
                                  "on": "#FFFFFF",
                                },
                              },
                              "surface": Object {
                                "RGB": "255,255,255",
                                "hex": "#FFFFFF",
                                "on": "#272727",
                              },
                              "white": Object {
                                "RGB": "255,255,255",
                                "hex": "#FFFFFF",
                                "on": "#272727",
                              },
                            }
                          }
                        >
                          <StyledComponent
                            color="primary"
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "Icon__StyledFontAwesomeIcon-ap8b0n-1",
                                  "isStatic": false,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    "color:",
                                    [Function],
                                    ";",
                                    [Function],
                                  ],
                                },
                                "displayName": "StyledFontAwesomeIcon",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "Icon__StyledFontAwesomeIcon-ap8b0n-1",
                                "target": [Function],
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            icon="check"
                            shade="main"
                            size="sm"
                            theme={
                              Object {
                                "action": Object {
                                  "dark": Object {
                                    "RGB": "79,38,98",
                                    "hex": "#4E2662",
                                    "on": "#FFFFFF",
                                  },
                                  "light": Object {
                                    "RGB": "173,101,207",
                                    "hex": "#AD65CF",
                                    "on": "#FFFFFF",
                                  },
                                  "main": Object {
                                    "RGB": "116,60,143",
                                    "hex": "#743C8F",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "background": Object {
                                  "RGB": "246,246,246",
                                  "hex": "#F6F6F6",
                                },
                                "black": Object {
                                  "main": Object {
                                    "RGB": "39,39,39",
                                    "hex": "#272727",
                                    "on": "#FFFFFF",
                                  },
                                  "tint20": Object {
                                    "RGB": "236,236,236",
                                    "hex": "#ECECEC",
                                    "on": "#272727",
                                  },
                                  "tint40": Object {
                                    "RGB": "199,199,199",
                                    "hex": "#C7C7C7",
                                    "on": "#272727",
                                  },
                                  "tint60": Object {
                                    "RGB": "160,160,160",
                                    "hex": "#A0A0A0",
                                    "on": "#FFFFFF",
                                  },
                                  "tint80": Object {
                                    "RGB": "105,105,105",
                                    "hex": "#696969",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "complimentary": Object {
                                  "dark": Object {
                                    "RGB": "206,185,0",
                                    "hex": "#CEB900",
                                    "on": "#272727",
                                  },
                                  "light": Object {
                                    "RGB": "255,245,157",
                                    "hex": "#FFF59D",
                                    "on": "#272727",
                                  },
                                  "main": Object {
                                    "RGB": "255,238,82",
                                    "hex": "#FFEE52",
                                    "on": "#272727",
                                  },
                                },
                                "error": Object {
                                  "dark": Object {
                                    "RGB": "197,73,1",
                                    "hex": "#C54901",
                                    "on": "#FFFFFF",
                                  },
                                  "main": Object {
                                    "RGB": "255,115,32",
                                    "hex": "#FF7320",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "primary": Object {
                                  "dark": Object {
                                    "RGB": "102,22,20",
                                    "hex": "#661614",
                                    "on": "#FFFFFF",
                                  },
                                  "light": Object {
                                    "RGB": "218,52,47",
                                    "hex": "#DA342F",
                                    "on": "#FFFFFF",
                                  },
                                  "main": Object {
                                    "RGB": "164,40,36",
                                    "hex": "#A42824",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "secondary": Object {
                                  "dark": Object {
                                    "RGB": "5,38,59",
                                    "hex": "#05263B",
                                    "on": "#FFFFFF",
                                  },
                                  "light": Object {
                                    "RGB": "89,156,175",
                                    "hex": "#599CAF",
                                    "on": "#FFFFFF",
                                  },
                                  "main": Object {
                                    "RGB": "11,70,107",
                                    "hex": "#0B466B",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "surface": Object {
                                  "RGB": "255,255,255",
                                  "hex": "#FFFFFF",
                                  "on": "#272727",
                                },
                                "white": Object {
                                  "RGB": "255,255,255",
                                  "hex": "#FFFFFF",
                                  "on": "#272727",
                                },
                              }
                            }
                          >
                            <FontAwesomeIcon
                              border={false}
                              className="c2"
                              color="primary"
                              fixedWidth={false}
                              flip={null}
                              icon="check"
                              inverse={false}
                              listItem={false}
                              mask={null}
                              pull={null}
                              pulse={false}
                              rotation={null}
                              shade="main"
                              size="sm"
                              spin={false}
                              swapOpacity={false}
                              symbol={false}
                              theme={
                                Object {
                                  "action": Object {
                                    "dark": Object {
                                      "RGB": "79,38,98",
                                      "hex": "#4E2662",
                                      "on": "#FFFFFF",
                                    },
                                    "light": Object {
                                      "RGB": "173,101,207",
                                      "hex": "#AD65CF",
                                      "on": "#FFFFFF",
                                    },
                                    "main": Object {
                                      "RGB": "116,60,143",
                                      "hex": "#743C8F",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "background": Object {
                                    "RGB": "246,246,246",
                                    "hex": "#F6F6F6",
                                  },
                                  "black": Object {
                                    "main": Object {
                                      "RGB": "39,39,39",
                                      "hex": "#272727",
                                      "on": "#FFFFFF",
                                    },
                                    "tint20": Object {
                                      "RGB": "236,236,236",
                                      "hex": "#ECECEC",
                                      "on": "#272727",
                                    },
                                    "tint40": Object {
                                      "RGB": "199,199,199",
                                      "hex": "#C7C7C7",
                                      "on": "#272727",
                                    },
                                    "tint60": Object {
                                      "RGB": "160,160,160",
                                      "hex": "#A0A0A0",
                                      "on": "#FFFFFF",
                                    },
                                    "tint80": Object {
                                      "RGB": "105,105,105",
                                      "hex": "#696969",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "complimentary": Object {
                                    "dark": Object {
                                      "RGB": "206,185,0",
                                      "hex": "#CEB900",
                                      "on": "#272727",
                                    },
                                    "light": Object {
                                      "RGB": "255,245,157",
                                      "hex": "#FFF59D",
                                      "on": "#272727",
                                    },
                                    "main": Object {
                                      "RGB": "255,238,82",
                                      "hex": "#FFEE52",
                                      "on": "#272727",
                                    },
                                  },
                                  "error": Object {
                                    "dark": Object {
                                      "RGB": "197,73,1",
                                      "hex": "#C54901",
                                      "on": "#FFFFFF",
                                    },
                                    "main": Object {
                                      "RGB": "255,115,32",
                                      "hex": "#FF7320",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "primary": Object {
                                    "dark": Object {
                                      "RGB": "102,22,20",
                                      "hex": "#661614",
                                      "on": "#FFFFFF",
                                    },
                                    "light": Object {
                                      "RGB": "218,52,47",
                                      "hex": "#DA342F",
                                      "on": "#FFFFFF",
                                    },
                                    "main": Object {
                                      "RGB": "164,40,36",
                                      "hex": "#A42824",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "secondary": Object {
                                    "dark": Object {
                                      "RGB": "5,38,59",
                                      "hex": "#05263B",
                                      "on": "#FFFFFF",
                                    },
                                    "light": Object {
                                      "RGB": "89,156,175",
                                      "hex": "#599CAF",
                                      "on": "#FFFFFF",
                                    },
                                    "main": Object {
                                      "RGB": "11,70,107",
                                      "hex": "#0B466B",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "surface": Object {
                                    "RGB": "255,255,255",
                                    "hex": "#FFFFFF",
                                    "on": "#272727",
                                  },
                                  "white": Object {
                                    "RGB": "255,255,255",
                                    "hex": "#FFFFFF",
                                    "on": "#272727",
                                  },
                                }
                              }
                              title=""
                              transform={null}
                            >
                              <svg
                                aria-hidden="true"
                                className="svg-inline--fa fa-check fa-w-16 fa-sm c2"
                                color="primary"
                                data-icon="check"
                                data-prefix="fas"
                                focusable="false"
                                role="img"
                                shade="main"
                                style={Object {}}
                                theme={
                                  Object {
                                    "action": Object {
                                      "dark": Object {
                                        "RGB": "79,38,98",
                                        "hex": "#4E2662",
                                        "on": "#FFFFFF",
                                      },
                                      "light": Object {
                                        "RGB": "173,101,207",
                                        "hex": "#AD65CF",
                                        "on": "#FFFFFF",
                                      },
                                      "main": Object {
                                        "RGB": "116,60,143",
                                        "hex": "#743C8F",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "background": Object {
                                      "RGB": "246,246,246",
                                      "hex": "#F6F6F6",
                                    },
                                    "black": Object {
                                      "main": Object {
                                        "RGB": "39,39,39",
                                        "hex": "#272727",
                                        "on": "#FFFFFF",
                                      },
                                      "tint20": Object {
                                        "RGB": "236,236,236",
                                        "hex": "#ECECEC",
                                        "on": "#272727",
                                      },
                                      "tint40": Object {
                                        "RGB": "199,199,199",
                                        "hex": "#C7C7C7",
                                        "on": "#272727",
                                      },
                                      "tint60": Object {
                                        "RGB": "160,160,160",
                                        "hex": "#A0A0A0",
                                        "on": "#FFFFFF",
                                      },
                                      "tint80": Object {
                                        "RGB": "105,105,105",
                                        "hex": "#696969",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "complimentary": Object {
                                      "dark": Object {
                                        "RGB": "206,185,0",
                                        "hex": "#CEB900",
                                        "on": "#272727",
                                      },
                                      "light": Object {
                                        "RGB": "255,245,157",
                                        "hex": "#FFF59D",
                                        "on": "#272727",
                                      },
                                      "main": Object {
                                        "RGB": "255,238,82",
                                        "hex": "#FFEE52",
                                        "on": "#272727",
                                      },
                                    },
                                    "error": Object {
                                      "dark": Object {
                                        "RGB": "197,73,1",
                                        "hex": "#C54901",
                                        "on": "#FFFFFF",
                                      },
                                      "main": Object {
                                        "RGB": "255,115,32",
                                        "hex": "#FF7320",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "primary": Object {
                                      "dark": Object {
                                        "RGB": "102,22,20",
                                        "hex": "#661614",
                                        "on": "#FFFFFF",
                                      },
                                      "light": Object {
                                        "RGB": "218,52,47",
                                        "hex": "#DA342F",
                                        "on": "#FFFFFF",
                                      },
                                      "main": Object {
                                        "RGB": "164,40,36",
                                        "hex": "#A42824",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "secondary": Object {
                                      "dark": Object {
                                        "RGB": "5,38,59",
                                        "hex": "#05263B",
                                        "on": "#FFFFFF",
                                      },
                                      "light": Object {
                                        "RGB": "89,156,175",
                                        "hex": "#599CAF",
                                        "on": "#FFFFFF",
                                      },
                                      "main": Object {
                                        "RGB": "11,70,107",
                                        "hex": "#0B466B",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "surface": Object {
                                      "RGB": "255,255,255",
                                      "hex": "#FFFFFF",
                                      "on": "#272727",
                                    },
                                    "white": Object {
                                      "RGB": "255,255,255",
                                      "hex": "#FFFFFF",
                                      "on": "#272727",
                                    },
                                  }
                                }
                                viewBox="0 0 512 512"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                                  fill="currentColor"
                                  style={Object {}}
                                />
                              </svg>
                            </FontAwesomeIcon>
                          </StyledComponent>
                        </StyledFontAwesomeIcon>
                      </div>
                    </StyledComponent>
                  </IconContainer>
                </IconWithTheme>
              </Icon>
              <Icon
                color="complimentary"
                name="check"
              >
                <IconWithTheme
                  color="complimentary"
                  isVisible={true}
                  name="check"
                  shade="main"
                  size="sm"
                  theme={
                    Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "79,38,98",
                          "hex": "#4E2662",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "173,101,207",
                          "hex": "#AD65CF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "116,60,143",
                          "hex": "#743C8F",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "206,185,0",
                          "hex": "#CEB900",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "255,245,157",
                          "hex": "#FFF59D",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "255,238,82",
                          "hex": "#FFEE52",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "197,73,1",
                          "hex": "#C54901",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "255,115,32",
                          "hex": "#FF7320",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "102,22,20",
                          "hex": "#661614",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "218,52,47",
                          "hex": "#DA342F",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "164,40,36",
                          "hex": "#A42824",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "5,38,59",
                          "hex": "#05263B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "89,156,175",
                          "hex": "#599CAF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "11,70,107",
                          "hex": "#0B466B",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    }
                  }
                >
                  <IconContainer
                    isVisible={true}
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Icon__IconContainer-ap8b0n-0",
                            "isStatic": false,
                            "lastClassName": "bJvwCd",
                            "rules": Array [
                              [Function],
                              " ",
                              [Function],
                            ],
                          },
                          "displayName": "IconContainer",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Icon__IconContainer-ap8b0n-0",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      isVisible={true}
                    >
                      <div
                        className=""
                      >
                        <StyledFontAwesomeIcon
                          color="complimentary"
                          icon="check"
                          shade="main"
                          size="sm"
                          theme={
                            Object {
                              "action": Object {
                                "dark": Object {
                                  "RGB": "79,38,98",
                                  "hex": "#4E2662",
                                  "on": "#FFFFFF",
                                },
                                "light": Object {
                                  "RGB": "173,101,207",
                                  "hex": "#AD65CF",
                                  "on": "#FFFFFF",
                                },
                                "main": Object {
                                  "RGB": "116,60,143",
                                  "hex": "#743C8F",
                                  "on": "#FFFFFF",
                                },
                              },
                              "background": Object {
                                "RGB": "246,246,246",
                                "hex": "#F6F6F6",
                              },
                              "black": Object {
                                "main": Object {
                                  "RGB": "39,39,39",
                                  "hex": "#272727",
                                  "on": "#FFFFFF",
                                },
                                "tint20": Object {
                                  "RGB": "236,236,236",
                                  "hex": "#ECECEC",
                                  "on": "#272727",
                                },
                                "tint40": Object {
                                  "RGB": "199,199,199",
                                  "hex": "#C7C7C7",
                                  "on": "#272727",
                                },
                                "tint60": Object {
                                  "RGB": "160,160,160",
                                  "hex": "#A0A0A0",
                                  "on": "#FFFFFF",
                                },
                                "tint80": Object {
                                  "RGB": "105,105,105",
                                  "hex": "#696969",
                                  "on": "#FFFFFF",
                                },
                              },
                              "complimentary": Object {
                                "dark": Object {
                                  "RGB": "206,185,0",
                                  "hex": "#CEB900",
                                  "on": "#272727",
                                },
                                "light": Object {
                                  "RGB": "255,245,157",
                                  "hex": "#FFF59D",
                                  "on": "#272727",
                                },
                                "main": Object {
                                  "RGB": "255,238,82",
                                  "hex": "#FFEE52",
                                  "on": "#272727",
                                },
                              },
                              "error": Object {
                                "dark": Object {
                                  "RGB": "197,73,1",
                                  "hex": "#C54901",
                                  "on": "#FFFFFF",
                                },
                                "main": Object {
                                  "RGB": "255,115,32",
                                  "hex": "#FF7320",
                                  "on": "#FFFFFF",
                                },
                              },
                              "primary": Object {
                                "dark": Object {
                                  "RGB": "102,22,20",
                                  "hex": "#661614",
                                  "on": "#FFFFFF",
                                },
                                "light": Object {
                                  "RGB": "218,52,47",
                                  "hex": "#DA342F",
                                  "on": "#FFFFFF",
                                },
                                "main": Object {
                                  "RGB": "164,40,36",
                                  "hex": "#A42824",
                                  "on": "#FFFFFF",
                                },
                              },
                              "secondary": Object {
                                "dark": Object {
                                  "RGB": "5,38,59",
                                  "hex": "#05263B",
                                  "on": "#FFFFFF",
                                },
                                "light": Object {
                                  "RGB": "89,156,175",
                                  "hex": "#599CAF",
                                  "on": "#FFFFFF",
                                },
                                "main": Object {
                                  "RGB": "11,70,107",
                                  "hex": "#0B466B",
                                  "on": "#FFFFFF",
                                },
                              },
                              "surface": Object {
                                "RGB": "255,255,255",
                                "hex": "#FFFFFF",
                                "on": "#272727",
                              },
                              "white": Object {
                                "RGB": "255,255,255",
                                "hex": "#FFFFFF",
                                "on": "#272727",
                              },
                            }
                          }
                        >
                          <StyledComponent
                            color="complimentary"
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "Icon__StyledFontAwesomeIcon-ap8b0n-1",
                                  "isStatic": false,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    "color:",
                                    [Function],
                                    ";",
                                    [Function],
                                  ],
                                },
                                "displayName": "StyledFontAwesomeIcon",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "Icon__StyledFontAwesomeIcon-ap8b0n-1",
                                "target": [Function],
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            icon="check"
                            shade="main"
                            size="sm"
                            theme={
                              Object {
                                "action": Object {
                                  "dark": Object {
                                    "RGB": "79,38,98",
                                    "hex": "#4E2662",
                                    "on": "#FFFFFF",
                                  },
                                  "light": Object {
                                    "RGB": "173,101,207",
                                    "hex": "#AD65CF",
                                    "on": "#FFFFFF",
                                  },
                                  "main": Object {
                                    "RGB": "116,60,143",
                                    "hex": "#743C8F",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "background": Object {
                                  "RGB": "246,246,246",
                                  "hex": "#F6F6F6",
                                },
                                "black": Object {
                                  "main": Object {
                                    "RGB": "39,39,39",
                                    "hex": "#272727",
                                    "on": "#FFFFFF",
                                  },
                                  "tint20": Object {
                                    "RGB": "236,236,236",
                                    "hex": "#ECECEC",
                                    "on": "#272727",
                                  },
                                  "tint40": Object {
                                    "RGB": "199,199,199",
                                    "hex": "#C7C7C7",
                                    "on": "#272727",
                                  },
                                  "tint60": Object {
                                    "RGB": "160,160,160",
                                    "hex": "#A0A0A0",
                                    "on": "#FFFFFF",
                                  },
                                  "tint80": Object {
                                    "RGB": "105,105,105",
                                    "hex": "#696969",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "complimentary": Object {
                                  "dark": Object {
                                    "RGB": "206,185,0",
                                    "hex": "#CEB900",
                                    "on": "#272727",
                                  },
                                  "light": Object {
                                    "RGB": "255,245,157",
                                    "hex": "#FFF59D",
                                    "on": "#272727",
                                  },
                                  "main": Object {
                                    "RGB": "255,238,82",
                                    "hex": "#FFEE52",
                                    "on": "#272727",
                                  },
                                },
                                "error": Object {
                                  "dark": Object {
                                    "RGB": "197,73,1",
                                    "hex": "#C54901",
                                    "on": "#FFFFFF",
                                  },
                                  "main": Object {
                                    "RGB": "255,115,32",
                                    "hex": "#FF7320",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "primary": Object {
                                  "dark": Object {
                                    "RGB": "102,22,20",
                                    "hex": "#661614",
                                    "on": "#FFFFFF",
                                  },
                                  "light": Object {
                                    "RGB": "218,52,47",
                                    "hex": "#DA342F",
                                    "on": "#FFFFFF",
                                  },
                                  "main": Object {
                                    "RGB": "164,40,36",
                                    "hex": "#A42824",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "secondary": Object {
                                  "dark": Object {
                                    "RGB": "5,38,59",
                                    "hex": "#05263B",
                                    "on": "#FFFFFF",
                                  },
                                  "light": Object {
                                    "RGB": "89,156,175",
                                    "hex": "#599CAF",
                                    "on": "#FFFFFF",
                                  },
                                  "main": Object {
                                    "RGB": "11,70,107",
                                    "hex": "#0B466B",
                                    "on": "#FFFFFF",
                                  },
                                },
                                "surface": Object {
                                  "RGB": "255,255,255",
                                  "hex": "#FFFFFF",
                                  "on": "#272727",
                                },
                                "white": Object {
                                  "RGB": "255,255,255",
                                  "hex": "#FFFFFF",
                                  "on": "#272727",
                                },
                              }
                            }
                          >
                            <FontAwesomeIcon
                              border={false}
                              className="c3"
                              color="complimentary"
                              fixedWidth={false}
                              flip={null}
                              icon="check"
                              inverse={false}
                              listItem={false}
                              mask={null}
                              pull={null}
                              pulse={false}
                              rotation={null}
                              shade="main"
                              size="sm"
                              spin={false}
                              swapOpacity={false}
                              symbol={false}
                              theme={
                                Object {
                                  "action": Object {
                                    "dark": Object {
                                      "RGB": "79,38,98",
                                      "hex": "#4E2662",
                                      "on": "#FFFFFF",
                                    },
                                    "light": Object {
                                      "RGB": "173,101,207",
                                      "hex": "#AD65CF",
                                      "on": "#FFFFFF",
                                    },
                                    "main": Object {
                                      "RGB": "116,60,143",
                                      "hex": "#743C8F",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "background": Object {
                                    "RGB": "246,246,246",
                                    "hex": "#F6F6F6",
                                  },
                                  "black": Object {
                                    "main": Object {
                                      "RGB": "39,39,39",
                                      "hex": "#272727",
                                      "on": "#FFFFFF",
                                    },
                                    "tint20": Object {
                                      "RGB": "236,236,236",
                                      "hex": "#ECECEC",
                                      "on": "#272727",
                                    },
                                    "tint40": Object {
                                      "RGB": "199,199,199",
                                      "hex": "#C7C7C7",
                                      "on": "#272727",
                                    },
                                    "tint60": Object {
                                      "RGB": "160,160,160",
                                      "hex": "#A0A0A0",
                                      "on": "#FFFFFF",
                                    },
                                    "tint80": Object {
                                      "RGB": "105,105,105",
                                      "hex": "#696969",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "complimentary": Object {
                                    "dark": Object {
                                      "RGB": "206,185,0",
                                      "hex": "#CEB900",
                                      "on": "#272727",
                                    },
                                    "light": Object {
                                      "RGB": "255,245,157",
                                      "hex": "#FFF59D",
                                      "on": "#272727",
                                    },
                                    "main": Object {
                                      "RGB": "255,238,82",
                                      "hex": "#FFEE52",
                                      "on": "#272727",
                                    },
                                  },
                                  "error": Object {
                                    "dark": Object {
                                      "RGB": "197,73,1",
                                      "hex": "#C54901",
                                      "on": "#FFFFFF",
                                    },
                                    "main": Object {
                                      "RGB": "255,115,32",
                                      "hex": "#FF7320",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "primary": Object {
                                    "dark": Object {
                                      "RGB": "102,22,20",
                                      "hex": "#661614",
                                      "on": "#FFFFFF",
                                    },
                                    "light": Object {
                                      "RGB": "218,52,47",
                                      "hex": "#DA342F",
                                      "on": "#FFFFFF",
                                    },
                                    "main": Object {
                                      "RGB": "164,40,36",
                                      "hex": "#A42824",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "secondary": Object {
                                    "dark": Object {
                                      "RGB": "5,38,59",
                                      "hex": "#05263B",
                                      "on": "#FFFFFF",
                                    },
                                    "light": Object {
                                      "RGB": "89,156,175",
                                      "hex": "#599CAF",
                                      "on": "#FFFFFF",
                                    },
                                    "main": Object {
                                      "RGB": "11,70,107",
                                      "hex": "#0B466B",
                                      "on": "#FFFFFF",
                                    },
                                  },
                                  "surface": Object {
                                    "RGB": "255,255,255",
                                    "hex": "#FFFFFF",
                                    "on": "#272727",
                                  },
                                  "white": Object {
                                    "RGB": "255,255,255",
                                    "hex": "#FFFFFF",
                                    "on": "#272727",
                                  },
                                }
                              }
                              title=""
                              transform={null}
                            >
                              <svg
                                aria-hidden="true"
                                className="svg-inline--fa fa-check fa-w-16 fa-sm c3"
                                color="complimentary"
                                data-icon="check"
                                data-prefix="fas"
                                focusable="false"
                                role="img"
                                shade="main"
                                style={Object {}}
                                theme={
                                  Object {
                                    "action": Object {
                                      "dark": Object {
                                        "RGB": "79,38,98",
                                        "hex": "#4E2662",
                                        "on": "#FFFFFF",
                                      },
                                      "light": Object {
                                        "RGB": "173,101,207",
                                        "hex": "#AD65CF",
                                        "on": "#FFFFFF",
                                      },
                                      "main": Object {
                                        "RGB": "116,60,143",
                                        "hex": "#743C8F",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "background": Object {
                                      "RGB": "246,246,246",
                                      "hex": "#F6F6F6",
                                    },
                                    "black": Object {
                                      "main": Object {
                                        "RGB": "39,39,39",
                                        "hex": "#272727",
                                        "on": "#FFFFFF",
                                      },
                                      "tint20": Object {
                                        "RGB": "236,236,236",
                                        "hex": "#ECECEC",
                                        "on": "#272727",
                                      },
                                      "tint40": Object {
                                        "RGB": "199,199,199",
                                        "hex": "#C7C7C7",
                                        "on": "#272727",
                                      },
                                      "tint60": Object {
                                        "RGB": "160,160,160",
                                        "hex": "#A0A0A0",
                                        "on": "#FFFFFF",
                                      },
                                      "tint80": Object {
                                        "RGB": "105,105,105",
                                        "hex": "#696969",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "complimentary": Object {
                                      "dark": Object {
                                        "RGB": "206,185,0",
                                        "hex": "#CEB900",
                                        "on": "#272727",
                                      },
                                      "light": Object {
                                        "RGB": "255,245,157",
                                        "hex": "#FFF59D",
                                        "on": "#272727",
                                      },
                                      "main": Object {
                                        "RGB": "255,238,82",
                                        "hex": "#FFEE52",
                                        "on": "#272727",
                                      },
                                    },
                                    "error": Object {
                                      "dark": Object {
                                        "RGB": "197,73,1",
                                        "hex": "#C54901",
                                        "on": "#FFFFFF",
                                      },
                                      "main": Object {
                                        "RGB": "255,115,32",
                                        "hex": "#FF7320",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "primary": Object {
                                      "dark": Object {
                                        "RGB": "102,22,20",
                                        "hex": "#661614",
                                        "on": "#FFFFFF",
                                      },
                                      "light": Object {
                                        "RGB": "218,52,47",
                                        "hex": "#DA342F",
                                        "on": "#FFFFFF",
                                      },
                                      "main": Object {
                                        "RGB": "164,40,36",
                                        "hex": "#A42824",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "secondary": Object {
                                      "dark": Object {
                                        "RGB": "5,38,59",
                                        "hex": "#05263B",
                                        "on": "#FFFFFF",
                                      },
                                      "light": Object {
                                        "RGB": "89,156,175",
                                        "hex": "#599CAF",
                                        "on": "#FFFFFF",
                                      },
                                      "main": Object {
                                        "RGB": "11,70,107",
                                        "hex": "#0B466B",
                                        "on": "#FFFFFF",
                                      },
                                    },
                                    "surface": Object {
                                      "RGB": "255,255,255",
                                      "hex": "#FFFFFF",
                                      "on": "#272727",
                                    },
                                    "white": Object {
                                      "RGB": "255,255,255",
                                      "hex": "#FFFFFF",
                                      "on": "#272727",
                                    },
                                  }
                                }
                                viewBox="0 0 512 512"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                                  fill="currentColor"
                                  style={Object {}}
                                />
                              </svg>
                            </FontAwesomeIcon>
                          </StyledComponent>
                        </StyledFontAwesomeIcon>
                      </div>
                    </StyledComponent>
                  </IconContainer>
                </IconWithTheme>
              </Icon>
            </div>
          </StyledComponent>
        </FilterableApprovalList__IconContainer>
      </div>
    </StyledComponent>
  </ApprovedContainer>
</LabelComponent>
`;

exports[`createLabelComponent returns a component with only a label 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<LabelComponent
  label="approvalLabel"
>
  <ApprovedContainer
    className="className"
    id="id"
  >
    <StyledComponent
      className="className"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "FilterableApprovalList__ApprovedContainer-sc-1ytxtx6-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:flex;align-items:center;justify-content:space-between;flex-direction:row;",
            ],
          },
          "displayName": "ApprovedContainer",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "FilterableApprovalList__ApprovedContainer-sc-1ytxtx6-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      id="id"
    >
      <div
        className="c0 className"
        id="id"
      >
        approvalLabel
        <div />
        <FilterableApprovalList__IconContainer>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "FilterableApprovalList__IconContainer-sc-1ytxtx6-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "display:flex;align-items:center;justify-content:space-between;flex-direction:row;",
                  ],
                },
                "displayName": "FilterableApprovalList__IconContainer",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "FilterableApprovalList__IconContainer-sc-1ytxtx6-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            />
          </StyledComponent>
        </FilterableApprovalList__IconContainer>
      </div>
    </StyledComponent>
  </ApprovedContainer>
</LabelComponent>
`;
